# pixida

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  django.yml
docker/: Dockerfile  django-entrypoint.sh
src/: .flake8  manage.py  pytest.ini  set_envvars_deploy.py  zappa_settings.json
src/pixida/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
src/pixida/todo/: admin.py  apps.py  docs.py  models.py  serializers.py  urls.py  views.py
src/pixida/todo/migrations/: 0001_initial.py
src/pixida/todo/tests/: factories.py  test_views.py
terraform/: cloud_front.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  variables.tf  vpc.tf
